# showcase_qt

./: .gitignore  CMakeLists.txt  CMakeSettings.json  main.cpp  vcpkg.json
controller/: DataCrypto.cpp  DataCrypto.hpp
model/CryptoMethods/: ICryptoMethod.cpp  ICryptoMethod.hpp  XorMethod.cpp  XorMethod.hpp
model/Data/: IData.cpp  IData.hpp  Image.cpp  Image.hpp  TextData.cpp  TextData.hpp
view/: Constants.hpp  CryptoAnalysisView.cpp  CryptoAnalysisView.hpp
